# snake_case

./: Cargo.toml  README.md  generate_docs.sh
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/implementors/core/borrow/: trait.Borrow.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.TryFrom.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/deref/: trait.Deref.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/snake_case/: all.html  fn.is_snake_case.html  index.html  sidebar-items.js  struct.InvalidSnakeCase.html  struct.SnakeCase.html  struct.SnakeCaseRef.html
docs/src/snake_case/: lib.rs.html
src/: lib.rs
