[package]
name = "snake_case"
version = "0.3.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2018"
description = "SnakeCase is a String-like type that can only contain valid non-empty snake_case"
homepage = "https://github.com/emilk/snake_case"
repository = "https://github.com/emilk/snake_case"
readme = "README.md"
keywords = ["snake_case", "string"]
categories = ["data-structures", "encoding"]
license = "MIT"
include = [ "**/*.rs", "Cargo.toml", "LICENSE-MIT"]

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
